[package]
name = "iroh-tunnel"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "P2P port-forwarding tunnel (TCP/UDP) via Iroh"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
iroh = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5"
which = "7"
edit = "0.1"
data-encoding = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# vergen-gitcl 9.x — inject git tag into APP_VERSION at build time.
# Pinned to 9.x: 10.x requires rustc 1.95, but this crate targets rust-version 1.91.
vergen-gitcl = { version = "9.0", features = ["build"] }
# Validate the git tag as Cargo semver before exporting it as APP_VERSION,
# so downstream packaging never receives an invalid version string.
semver = "1"
